...
        android:title="Live Time Card"/>

    <item
        android:id="@+id/nav_store"
        android:title="Store"/>
    <item
        android:id="@+id/nav_tax"
        android:title="W-2 Tax Form" />

    <item
        android:id="@+id/nav_analytic_reports"
        android:title="Analytic Reports"/>

...
